--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -92,6 +92,7 @@
 @media (max-width: 1100px) {
   .skills {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+    width: 55vw;
   }
 }
 
@@ -99,6 +100,7 @@
   .skills {
     border: 0;
     gap: 0.2em;
+    width: 60vw;
   }
 
   .filter-btn {
@@ -110,7 +112,7 @@
   .techs {
     width: 5rem;
     height: 5rem;
-    font-size: 0.75rem;
+    font-size: 13px;
   }
   .logo {
     height: 2rem;
@@ -118,17 +120,14 @@
 }
 
 @media (max-width: 750px) {
-  .skills {
-    width: 50vw;
-  }
   .filter-btn {
     width: 70px;
     height: 35px;
     font-size: 12px;
   }
   .techs {
-    width: 4.3rem;
-    height: 4.3rem;
+    width: 5rem;
+    height: 5rem;
   }
 }
 
@@ -143,9 +142,9 @@
 
 @media (max-width: 450px) {
   .techs {
-    width: 3.8rem;
-    height: 3.8rem;
-    font-size: 0.6rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    font-size: 11px;
   }
   .logo {
     height: 1.8rem;
